--- a/styles.css
+++ b/styles.css
@@ -199,6 +199,7 @@ color: rgb(0, 127, 178);
   text-decoration: underline;
   font-style: bold;
   letter-spacing: 2px;
+  margin-left: 10px;
 }
 
 
@@ -272,7 +273,7 @@ border-image: linear-gradient(to right, #3c3c44 , #30475e ) 1;
 .project-2, .project-3{
   height: 180px;
 }
-.project-5{
+.project-5, .project-6{
   height: 230px;
 }
 
@@ -288,6 +289,7 @@ scroll-behavior: smooth;
 
 .para{
   width: 900px;
+  font-size: 20px;
   margin-right: auto;
   margin-left: auto;
 }
