--- a/styles.css
+++ b/styles.css
@@ -18,71 +18,95 @@ body{
   transition: all 0.4s ease;
 }
 
-.navbar{
-  padding-right: 20px;
-  padding-left: 20px;
+nav{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  text-align: center;
+  background-color: rgba(17, 17, 17, 0.9);
+  color: #e6e6e6;
+  font-family: sans-serif;
+  min-height: 8vh;
+  border-bottom: 5px solid #30475e;
   position: fixed;
   z-index: 2;
   width: 100%;
-  border-bottom: 5px solid #30475e;
-  min-height: 8vh;
-  background-color: rgba(17, 17, 17, 0.9);
 }
 
-.navbar-list{
-  list-style: none;
-  text-decoration: none;
-  padding-right: 40px;
-  margin-right: 30px;
-}
-
-.nav-link, .nav-item{
-  margin-right: 15px;
-  width: 80px;
-}
-
-.navbar-list li:hover{
-  transform: scale(.97);
-}
-
-.navbar-list li a{
-  color: #e6e6e6;
-  font-weight: bold;
-  font-size: 15px;
-  text-decoration: none;
-}
-
-.navbar-list li a:hover{
-color: #30475e;
-}
-
-
-a{
-  text-decoration: none;
+.nav-links{
+  margin-bottom: 0px;
 }
 
 .logo{
   text-transform: uppercase;
   letter-spacing: 5px;
-  font-size: 1.2em;
-  font-weight: bold;
-  margin-left: 90px;
-}
-
- .logo:hover{
-  transform: scale(.97);
+  color: #e6e6e6;
 }
 
 .logo a{
   color: #e6e6e6;
-  font-weight: 600;
-  text-decoration: none;
-  transition: all 0.4s ease;
+text-decoration: none;
+font-weight: bolder;
+}
+
+.logo:hover{
+  transform: scale(.97);
 }
 
 .logo a:hover{
   color: #30475e;
-  transform: scale(.97);
+}
+
+.nav-links{
+  display: flex;
+  justify-content: space-between;
+  width: 40%;
+list-style: none;
+font-size: 17px;
+}
+
+a li:hover{
+  color: #30475e;
+}
+
+a:hover{
+  text-decoration: none;
+}
+
+a li{
+  text-decoration: none;
+  color: #e6e6e6;
+  font-weight: bolder;
+}
+
+.burger{
+  display: none;
+}
+
+.burger div{
+  width: 25px;
+  height: 3px;
+  background-color: #e6e6e6;
+  margin: 5px;
+  transition: all 0.3s ease;
+}
+
+.line1{
+ background-color: #e6e6e6;
+ height: 1px;
+ width: 2px;
+}
+
+.line2{
+ background-color: #eee;
+ height: 1px;
+ width: 2px;
+}
+
+.line3{
+ background-color: #eee;
+ height: 1px;
+ width: 2px;
 }
 
 /* Landing */
@@ -120,7 +144,6 @@ letter-spacing: 3px;
 
 .btn{
   cursor: pointer;
-  /* background-color: black; */
   padding: 0.5em;
   border: 2px solid #e6e6e6;
   color: #e6e6e6;
@@ -214,6 +237,7 @@ color: rgb(0, 127, 178);
 /* My Work Section */
 #myWork{
   text-align: center;
+
 }
 
 .section-subHeading{
@@ -230,6 +254,13 @@ margin-left: auto;
 margin-bottom: 50px;
 border-right: 2px solid;
 border-image: linear-gradient(to right, #3c3c44 , #30475e ) 1;
+transition: 0.5 easein;
+}
+
+.card:hover{
+  box-shadow: -10px 14px 67px 1px rgba(92,84,84,1);
+-webkit-box-shadow: -10px 14px 67px 1px rgba(92,84,84,1);
+-moz-box-shadow: -10px 14px 67px 1px rgba(92,84,84,1);
 }
 
 .card-header{
@@ -299,30 +330,68 @@ footer{
   color: rgba(255, 255, 255, 0.25);
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media screen and (max-width: 1028px) {
-  .logo{
-    font-size: 0.9em;
-    margin-left: 0px;
+@media (max-width: 950px){
+.nav-links{
+  width: 60%;
+}
+  ul a li{
+    font-size: 15px;
   }
+
+  a li{
+    margin-right: 10px;
+  }
+
+  .logo a{
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 768px){
+  body{
+    overflow-x: hidden;
+  }
+
+  .burger{
+    display: block;
+  cursor: pointer;
+  }
+
+  .nav-links{
+    display: flex;
+  background-color: black;
+  opacity: 0.8;
+  height: 92vh;
+  width: 50%;
+    position: absolute;
+    top: 8vh;
+    right: 0px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    transform: translateX(100%);
+    transition: transform 0.5s ease-in;
+  }
+
+  .fadeIn{
+    transform: translateX(0%);
+  }
+
+  .move .line1{
+    transform: rotate(-45deg) translate(-5px,6px);
+  }
+
+  .move .line2{
+  opacity: 0;
+  }
+
+  .move .line3{
+    transform: rotate(45deg) translate(-5px, -6px);
+  }
+
+}
+
+@media (max-width: 1028px) {
 
 .para{
   font-size: 1.4em;
@@ -356,12 +425,4 @@ margin-left: auto;
 .work-btn{
   margin-bottom: 10px;
 }
-
-.nav-link, .nav-item{
-margin-left: auto;
-margin-right: auto;
-  text-align: center;
-}
-
-
 }
